nav and body spacing fix
fixed nav bar spacing with flex
applied margins and flex to body

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,8 @@ header {
 nav {
     display: flex;
     flex-direction: row;
-    gap: 20px; 
+    gap: 20px;
+    margin: 2pc;
 }
 
 .nav-button {
@@ -36,30 +37,47 @@ nav {
 .icon {
     height: 30px;
     width: 30px;
+
+}
+
+.socials {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1px;
+
 }
 
 main {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
 
 }
 
 section {
-    width: 70pc;
-    height: 30pc;
-    padding: 10px;
+    padding: 30px;
+}
+.header-text {
+    height: 15pc;
+}
+.column1 {
+    display: flex;
+    flex-direction: column;
+    align-content: space-around;
 }
 
 h1 {
     font-weight: 600;
     font-size: 30px;
-    line-height: 1.6;
+    margin: 1.5pc;
+    
 }
 
 .emphasis {
     font-weight: 600;
     font-size: 60px;
-    line-height: 1.6;
     letter-spacing: 8px;
 }
 
@@ -67,16 +85,35 @@ h2 {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.4;
+    margin: 2pc;
 }
 
+.nav-alt-button {
+    width: 100px; 
+    border-radius: 20px;
+    background: #d9f5fc;
+    padding: 8px;
+    margin: 2pc;
+}
 .nav-alt-button-text {
     font-weight: 600;
-    font-size: 25px;
+    font-size: 22px;
     line-height: 1.6;
 }
 
+.column2 {
+    display: flex;
+    align-items: center;
+    margin: 2pc;
+}
+img {
+    height: 200px;
+}
 
-
+footer {
+    padding: 10px;
+    text-align: right;
+}
 * {
     border: 1px solid grey;
     } 
